# zinc

./: .editorconfig  .gitmodules  CMakeLists.txt  notes.txt
.zinc/logs/: 2025-01-31T22:11:26+00:00.log.txt  2025-01-31T22:11:36+00:00.log.txt  2025-01-31T22:28:48+00:00.log.txt  2025-01-31T22:28:59+00:00.log.txt  2025-01-31T22:29:12+00:00.log.txt
cli/: chat.cpp  chatabout.cpp  complete.cpp
include/zinc/: __generator.hpp  common.hpp  configuration.hpp  diff.hpp  hodgepodge.hpp  http.hpp  http_beast.cpp  http_example.cpp  json.hpp  log.hpp  makefile  openai.hpp  openai_client.hpp  test_http.cpp
myersdiff/6/: Makefile  run.bash
myersdiff/6/include/: diff_state.hpp  myers_algorithm.hpp  snake.hpp
myersdiff/6/test/: test_diff_state.cpp  test_myers_algorithm.cpp  test_snake.cpp
myersdiff/lcs/: asymstream.cpp
scripts/: buildpart.bash  common.py  llama_file_flat.py  llama_file_tool.py  makecmdfile.bash  update.bash
src/: common.cpp  configuration.cpp  diff.cpp  diff_dtl.cpp  diff_edlib.cpp  diff_gritzko.cpp  diff_myers_1.cpp  diff_xdiff.cpp  diff_xdiff_git-xdiff.cpp  dmp_diff.hpp  edlib.cpp  edlib.h  hodgepodge.cpp  http_beast.cpp  json_boost.cpp  log.cpp  mdspan  openai.cpp  python.txt  python_embedded.cpp  python_subprocess.cpp
tests/: slidingmyers.cpp  slidingmyers3.cpp  slidingmyers4.cpp  slidingmyers5.cpp  test_configuration.cpp  test_diff.cpp  test_generator.cpp  test_http.cpp  test_json.cpp  test_log.cpp  test_openai.cpp
tools/: chat.cpp  complete.cpp
